Agregada la carpeta css para colocar mas estilos.
Se agrega la carpeta css para agregar mas estilos y se modifica index para colocar las imagenes.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>PLUS_ENERGY</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 
@@ -27,7 +27,7 @@
 	<main class="main">
 		<div class="container">
 			<h1>Hola soy el titulo</h1>
-			<p>parrafoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
+			<p>parrafooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
 			<p>parrafooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
 			<p>parrafooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
 			<p>parrafooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
@@ -40,6 +40,18 @@
 			<p>parrafoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
 			<p>parrafoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
 		</div>
+		
+
+		<section id="blog">
+		<h3>Lo del blog</h3>
+			<div class="contenedor">
+				<article>
+						<img src="https://i.postimg.cc/sDxrrvRG/IMG-20201020-120305022.jpg">
+						<h4>Tu UPS perfecto</h4>
+				</article>	
+			</div>	
+		</section>
+		
 	</main>
 			<footer class="footer">
 				<div class="container">
