Agrego imagenes, modifico tamaño imagenes.
Agrego imagenes en el index y modifico el tamaño de las imagenes ya que siempre se mostraban bien grandecitas colocándolo en el blog.css

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 						<img src="https://i.postimg.cc/sDxrrvRG/IMG-20201020-120305022.jpg">
 						<h4>Tu UPS perfecto</h4>
 				</article>	
+				<article>
+						<img src="https://i.postimg.cc/VLfjLP7C/Screenshot-from-2020-11-08-21-13-38.png">
+						<h4>Arreglar tu ups</h4>
+				</article>
+				<article>
+						<img src="https://i.postimg.cc/HLXJ96Zm/IMG-20201015-155902981.jpg">
+						<h4>Mejor ups</h4>
+				</article>
 			</div>	
 		</section>
 		
